[package]
name = "serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
axum = "0.6.1"
clap = { version = "4.0.4", features = ["derive", "cargo"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }